--- a/src/css/search.css
+++ b/src/css/search.css
@@ -63,12 +63,25 @@ input{
 }
 
 .button-del{
-  width: 10%;
+  /*width: 10%;
   background: rgba(255,55,155, .783);
   border: 1px solid gray;
   border-radius: 5px;
   padding: 1em;
-  font-size: .7em;
+  margin: 1%;
+  height: 8vh;
+  /*text-transform: uppercase;*/
+  /*width: 50%;
+  margin: 5%;
+  height: 5vh;*/
+  width: 20%;
+  height: 8vh;
+  text-align: center;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  padding: .6em;
+  border: 1px solid rgba(0,0,0,.14);
+  margin: 3%;
   letter-spacing: .2em;
   transition:
   width 1.5s,
@@ -77,11 +90,19 @@ input{
   transform 2s,
   color 2s,
   border 0.15s linear;
-  margin: 1%;
-  height: 8vh;
-  text-transform: uppercase;
+  background: rgba(255,55,155, .783);
+  border: 1px solid gray;
+
 }
 
 .input-mid{
-  width: 68%;
+  width: 78%;
+}
+
+#additional{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-right: 23%;
+  padding-left: 18%;
 }
