--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   height: 50vh;
-  position: static;
 }
 
 .right{
@@ -31,11 +30,11 @@
 }
 
 
-@media screen and (max-width: 736px){
+@media screen and (max-width: 450px){
 
   .header-outer{
     display: block;
-    position: absolute;
+    /*position: absolute;*/
   }
 
   .right{
