--- a/src/css/suggest.css
+++ b/src/css/suggest.css
@@ -18,10 +18,13 @@
   padding: .5em 1em;
   -webkit-transition: border 0.2s, box-shadow 0.2s;
           transition: border 0.2s, box-shadow 0.2s;
+          border-radius: 5px;
 }
 .geosuggest__input:focus {
-  border-color: #267dc0;
+  border-color: #445566;
   box-shadow: 0 0 0 transparent;
+  border-radius: 5px;
+
 }
 .geosuggest__suggests {
   position: absolute;
@@ -32,7 +35,7 @@
   padding: 0;
   margin-top: -1px;
   background: #fff;
-  border: 2px solid #267dc0;
+  border: 2px solid #445566;
   border-top-width: 0;
   overflow-x: hidden;
   overflow-y: auto;
@@ -40,6 +43,8 @@
   z-index: 5;
   -webkit-transition: max-height 0.2s, border 0.2s;
           transition: max-height 0.2s, border 0.2s;
+          border-radius: 5px;
+
 }
 .geosuggest__suggests--hidden {
   max-height: 0;
@@ -61,7 +66,7 @@
   background: #f5f5f5;
 }
 .geosuggest-item--active {
-  background: #267dc0;
+  background: #445566;
   color: #fff;
 }
 .geosuggest-item--active:hover,
