--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,3 +22,28 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:-webkit-any-link {
+    color: white;
+    text-decoration: none;
+    cursor: auto;
+}
+a {
+    text-decoration: none;
+    color: white;
+    -webkit-transition: width 1.5s, height 1.5s, background 2s, color 2s, border 0.15s linear, -webkit-transform 2s;
+    transition: width 1.5s, height 1.5s, background 2s, color 2s, border 0.15s linear, -webkit-transform 2s;
+    transition: width 1.5s, height 1.5s, background 2s, transform 2s, color 2s, border 0.15s linear;
+    transition:  width 1.5s, height 1.5s, background 2s, transform 2s, color 2s, border 0.15s linear, -webkit-transform 2s;
+    font-family: Kavoon;
+    letter-spacing: .1em;
+}
+
+a:hover{
+  color: white;
+  border-bottom: 4px solid white;
+}
