--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,19 @@
   height: 50vh;
 }
 
+.home-header-outer{
+  display: flex;
+  flex-direction: row;
+  background: url('map.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 5em;
+}
+
 .right{
   order: 2;
   width: 50%;
@@ -29,7 +42,6 @@
   width: 50%;
 }
 
-
 @media screen and (max-width: 450px){
 
   .header-outer{
@@ -53,4 +65,42 @@
     background-size: contain;
     background-repeat: no-repeat;
   }
+}
+
+.welcome-message{
+    animation: 5s welcome-message linear;
+    animation: 15s swing-message infinite;
+    color: #445566;
+    border: 1px solid #445566;
+    background: rgba(255,255,255, .7584);
+    height: 50vh;
+    width: 40%;
+    border: 1px solid white;
+    border: 1px solid rgba(	68, 85, 102, .4);
+    border-radius: 5px;
+    padding: 2em;
+    font-family: helvetica;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: center;
+    transform: rotate(-10deg);
+    flex-direction: column;
+    -webkit-box-shadow: -10px 3px 70px -5px rgba(68,85,102,0.71);
+    -moz-box-shadow: -10px 3px 70px -5px rgba(68,85,102,0.71);
+    box-shadow: -10px 3px 70px -5px rgba(68,85,102,0.71);
+}
+
+@keyframes welcome-message{
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@keyframes swing-message{
+    0% { transform: rotate(0deg); }
+    20% { transform: rotate(10deg); }
+    40% { transform: rotate(-10deg); }
+    60% { transform: rotate(5deg); }
+    80% { transform: rotate(-5deg); }
+    100% { transform: rotate(0deg); }
 }
