--- a/src/css/search.css
+++ b/src/css/search.css
@@ -31,10 +31,10 @@
 
 form{
   width: 100%;
-  border: 1px solid rgba(0,0,0,.13);
-  border-radius: 5px;
-  height: 55vh;
-  overflow:auto;
+  /*border: 1px solid rgba(0,0,0,.13);
+  border-radius: 5px;*/
+  /*height: 55vh;*/
+  overflow: auto;
   padding: 1em;
   margin: 0 auto;
   display: block;
@@ -43,7 +43,18 @@ form{
 }
 
 input{
-  width: 80%;
+  width: 95%;
+  height: 8vh;
+  text-align: center;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  padding: .6em;
+  /*border: 1px solid rgba(0,0,0,.14);*/
+  margin: 1%;
+}
+
+.button-add{
+  width: 50%;
   height: 8vh;
   text-align: center;
   border: 1px solid transparent;
@@ -51,28 +62,21 @@ input{
   padding: .6em;
   border: 1px solid rgba(0,0,0,.14);
   margin: 1%;
+  background: rgba(255, 244, 233, .3);
+  font-size: .6em;
+  border: 1px solid orange;
 }
 
 .but-area{
   width: 100%;
   margin: 0 auto;
-  display: block;
+  display: flex;
+  flex-direction: row;
   text-align: center;
   margin-top: 1%;
 }
 
 .button-del{
-  /*width: 10%;
-  background: rgba(255,55,155, .783);
-  border: 1px solid gray;
-  border-radius: 5px;
-  padding: 1em;
-  margin: 1%;
-  height: 8vh;
-  /*text-transform: uppercase;*/
-  /*width: 50%;
-  margin: 5%;
-  height: 5vh;*/
   width: 20%;
   height: 8vh;
   text-align: center;
@@ -103,4 +107,65 @@ input{
   justify-content: center;
   padding-right: 23%;
   padding-left: 18%;
+}
+
+.search-fade{
+    animation: 5s search-fade-horiz linear;
+    color: #445566;
+    border-radius: 5px;
+    font-family: helvetica;
+    font-size: .9em;
+    display: flex;
+    justify-content: center;
+    /*transform: rotate(-10deg);*/
+    flex-direction: column;
+}
+
+@keyframes search-fade-horiz{
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+/*
+@keyframes SearchfadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}*/
+/*
+.search-fade-in {
+  opacity: 0;
+  animation: SearchfadeIn ease-in 1;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+  border-radius: 5px 0px 0px 5px;
+}
+
+.search-fade-in.one {
+  animation-delay: 0.8s;
+}
+
+.search-fade-in.two {
+  animation-delay: 1.4s;
+}
+
+.search-fade-in.three {
+  animation-delay: 1.8s;
+}
+
+.search-fade-in.four {
+  animation-delay: 2.5s;
+}*/
+.flex-search{
+  border: 3px solid red;
+  display: flex;
+  flex-direction: row;
+}
+
+.right-search{
+  border: 3px solid blue;
+  width: 60%;
+}
+
+.left-search{
+  border: 3px solid green;
+  width: 40%;
 }
