--- a/src/css/suggest.css
+++ b/src/css/suggest.css
@@ -1,11 +1,8 @@
-/*Got this snippet from GEO-SUGGEST GITHUB*/
-/*https://github.com/ubilabs/react-geosuggest*/
 /**
  * The geosuggest module
  */
 .geosuggest {
-  font-size: 18px;
-  font-size: 1rem;
+  font-size: .8em;
   position: relative;
   width: 50%;
   margin: 1em auto;
@@ -13,18 +10,15 @@
 }
 .geosuggest__input {
   width: 100%;
-  border: 2px solid transparent;
-  box-shadow: 0 0 1px #3d464d;
   padding: .5em 1em;
   -webkit-transition: border 0.2s, box-shadow 0.2s;
-          transition: border 0.2s, box-shadow 0.2s;
-          border-radius: 5px;
+  transition: border 0.2s, box-shadow 0.2s;
+  border: 1px solid gray;
+  background: white;
 }
 .geosuggest__input:focus {
-  border-color: #445566;
+  border-color: #267dc0;
   box-shadow: 0 0 0 transparent;
-  border-radius: 5px;
-
 }
 .geosuggest__suggests {
   position: absolute;
@@ -32,20 +26,19 @@
   left: 0;
   right: 0;
   max-height: 25em;
-  padding: 0;
-  margin-top: -1px;
+  margin-top: 5px;
   background: #fff;
-  border: 2px solid #445566;
-  border-top-width: 0;
+  border: 1px solid #445566;
+  /*border-top-width: 0;*/
   overflow-x: hidden;
   overflow-y: auto;
   list-style: none;
   z-index: 5;
-  -webkit-transition: max-height 0.2s, border 0.2s;
-          transition: max-height 0.2s, border 0.2s;
-          border-radius: 5px;
-
+  border-radius: 5px;
+  padding: 0;
+  width: 100%;
 }
+
 .geosuggest__suggests--hidden {
   max-height: 0;
   overflow: hidden;
@@ -56,17 +49,17 @@
  * A geosuggest item
  */
 .geosuggest-item {
-  font-size: 18px;
   font-size: 1rem;
-  padding: .5em .65em;
+  padding: 1em;
   cursor: pointer;
+  text-transform: capitalize;
 }
 .geosuggest-item:hover,
 .geosuggest-item:focus {
   background: #f5f5f5;
 }
 .geosuggest-item--active {
-  background: #445566;
+  background: #267dc0;
   color: #fff;
 }
 .geosuggest-item--active:hover,
