--- a/src/css/suggest.css
+++ b/src/css/suggest.css
@@ -4,17 +4,18 @@
 .geosuggest {
   font-size: .8em;
   position: relative;
-  width: 50%;
+  /*width: 50%;*/
   margin: 1em auto;
   text-align: left;
 }
 .geosuggest__input {
-  width: 100%;
-  padding: .5em 1em;
   -webkit-transition: border 0.2s, box-shadow 0.2s;
   transition: border 0.2s, box-shadow 0.2s;
   border: 1px solid gray;
   background: white;
+  padding: 1em;
+  border-radius: 3px;
+  width: 100%;
 }
 .geosuggest__input:focus {
   border-color: #267dc0;
