--- a/src/css/search.css
+++ b/src/css/search.css
@@ -29,29 +29,14 @@
   width: 100%;
 }
 
-
 form{
   width: 100%;
-  /*border: 1px solid rgba(0,0,0,.13);
-  border-radius: 5px;*/
-  /*height: 55vh;*/
   overflow: auto;
   padding: 1em;
   margin: 0 auto;
   display: block;
   text-align: center;
   overflow:auto;
-}
-
-input{
-  width: 95%;
-  height: 8vh;
-  text-align: center;
-  border: 1px solid transparent;
-  border-radius: 5px;
-  padding: .6em;
-  /*border: 1px solid rgba(0,0,0,.14);*/
-  margin: 1%;
 }
 
 .button-add{
@@ -78,28 +63,10 @@ input{
 }
 
 .button-del{
-  width: 20%;
-  height: 8vh;
   text-align: center;
   border: 1px solid transparent;
-  border-radius: 5px;
-  padding: .6em;
-  border: 1px solid rgba(0,0,0,.14);
-  margin: 3%;
-  letter-spacing: .2em;
-  transition:
-  width 1.5s,
-  height 1.5s,
-  background 2s,
-  transform 2s,
-  color 2s,
-  border 0.15s linear;
-  background: rgba(255,55,155, .783);
-  border: 1px solid gray;
-}
-
-.input-mid{
-  width: 78%;
+  background: transparent;
+  color: #ff6666;
 }
 
 #additional{
@@ -126,47 +93,25 @@ input{
   0%   { opacity: 0; }
   100% { opacity: 1; }
 }
-/*
-@keyframes SearchfadeIn {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
-}*/
-/*
-.search-fade-in {
-  opacity: 0;
-  animation: SearchfadeIn ease-in 1;
-  animation-fill-mode: forwards;
-  animation-duration: 1s;
-  border-radius: 5px 0px 0px 5px;
-}
 
-.search-fade-in.one {
-  animation-delay: 0.8s;
-}
-
-.search-fade-in.two {
-  animation-delay: 1.4s;
-}
-
-.search-fade-in.three {
-  animation-delay: 1.8s;
-}
-
-.search-fade-in.four {
-  animation-delay: 2.5s;
-}*/
 .flex-search{
-  border: 3px solid red;
   display: flex;
   flex-direction: row;
 }
 
 .right-search{
-  border: 3px solid blue;
-  width: 60%;
+  width: 70%;
 }
 
 .left-search{
-  border: 3px solid green;
-  width: 40%;
+  width: 30%;
+  border-right: 1px solid #445566;
+}
+
+.mapStyle{
+  height: 60vh;
+}
+
+input{
+  border: 4px solid pink;
 }
