--- a/src/css/header.css
+++ b/src/css/header.css
@@ -21,6 +21,8 @@
   order: 1;
   width: 50%;
   background: rgba(0,0,0, .5);
+  background: #445566;
+
   border-right: 4px solid rgba(255,255,255, .864);
   color: white;
   padding: 3em;
@@ -40,6 +42,32 @@
   background-position: center right;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.left-about{
+  order: 2;
+  width: 50%;
+  animation: 3s zoom-in-image;
+  background: url('map-green.png');
+  background-position: center right;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.right-about{
+  order: 2;
+  width: 50%;
+  background: rgba(0,0,0, .5);
+  background: #445566;
+  border-right: 4px solid rgba(255,255,255, .864);
+  color: white;
+  padding: 3em;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  animation: 3s zoom-in-text;
 }
 
 @keyframes zoom-in-image {
