--- a/src/css/nav_bar.css
+++ b/src/css/nav_bar.css
@@ -1,6 +1,7 @@
 .nav-ul{
   background: rgba(0,0,0,.63);
   background: #445566;
+  background: rgba(0,0,0, .5);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
