--- a/src/css/nav_bar.css
+++ b/src/css/nav_bar.css
@@ -2,6 +2,7 @@
   background: rgba(0,0,0,.63);
   background: #445566;
   background: rgba(0,0,0, .5);
+  background: #446666;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
