--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -4,45 +4,67 @@
   height: 90vh;
 }
 
-.colAFlex, .colBFlex, .colCFlex{
-  display: flex;
-  flex-direction: row;
-  border-bottom: 4px solid rgba(255,255,255, .3);
-  height: 35vh;
-  border: 4px solid red;
-}
-
-.colAFlex{
-  order: 1;
-
-}
-
-.colBFlex{
-  order: 2;
-}
-
-.colCFlex{
-  order: 3;
-}
-
 .grid-outer{
   display: flex;
   justify-content: center;
+  background: rgba(250, 250, 255, .5748);
 }
 
 .grid{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap-reverse;
+  justify-content: center;
+  padding: 1em;
+  padding-top: 2em;
   width: 100%;
 }
 
 .box{
   animation: 3s zoom-in-text;
-  height: 35vh;
-  padding: 1em;
+  min-height: 35vh;
+  padding: 2em;
   align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-wrap: wrap;
+  min-width: 30%;
+  margin: 1%;
+  border: 1px solid #443355;
+  border: 1px solid #ADD8E6;
+  border-radius: 5px;
+  background: #FCFCFC;
+}
+
+.del-button{
+  border: 1px solid #446666;
+  border-radius: 5px;
+  padding: 1em;
+  font-size: .8em;
+  color: #446666;
+  background: transparent;
+}
+
+.item-name{
+  text-transform: uppercase;
+  border-bottom: 3px solid #665544;
+  width: 100%;
+  padding-bottom: .5em;
+}
+
+.item-path{
+  padding-top: 1em;
+  padding-bottom: .5em;
+}
+
+.single-item-path{
+  margin: 2%;
+  padding: .5em;
+}
+
+.counter{
+  font-weight: bold;
+  color: 	#664455;
+
 }
