--- a/src/css/header.css
+++ b/src/css/header.css
@@ -356,7 +356,6 @@
   height: 20vh;
   width: 11vw;
   border-radius: 100px;
-
 }
 
 .name-austin{
@@ -385,4 +384,16 @@
   -webkit-box-shadow: -10px 3px 70px -5px rgba(68,85,102,0.71);
   -moz-box-shadow: -10px 3px 70px -5px rgba(68,85,102,0.71);
   box-shadow: -10px 3px 70px -5px rgba(68,85,102,0.71);
+}
+
+.img-tsp{
+  background: url("./tsp.png");
+  background-size: contain;
+  background-position: center center;
+  order: 1;
+  height: 20vh;
+  width: 20vw;
+  border: 1px solid #445566;
+  border-radius: 5px;
+  background-repeat: no-repeat;
 }
