--- a/src/css/search.css
+++ b/src/css/search.css
@@ -63,7 +63,6 @@ form{
 }
 
 .button-del{
-  text-align: center;
   border: 1px solid transparent;
   background: transparent;
   color: #ff6666;
@@ -100,30 +99,44 @@ form{
 }
 
 .right-search{
-  background: #fcfcf6;
-  min-height: 60vh;
-  justify-content: center;
+  padding: 2em;
+  width: 50%;
+  height: 100vh;
   display: flex;
+  flex-direction: column;
 }
 
 .left-search{
-  width: 35%;
+  width: 50%;
+  padding: 2em;
 }
 
 input{
   border: 2px solid #445566;
   padding: 1em;
   border-radius: 5px;
+
 }
 
 .disabled{
-  background: purple;
-}
-
-#mapContainer{
-  border: 40px solid blue;
+  background: lightgray;
+  color: gray;
+  border: 1px solid gray;
 }
 
 .directions-button{
-  background: orange;
+  background: transparent;
+  border: 1px solid #445566;
+  padding: 1em;
+  border-radius: 5px;
+  z-index: 1;
 }
+/*
+#addLoc{
+  border: 1px solid red;
+  border-radius: 5px;
+}
+.geoSuggestInput input{
+  border: 1px solid #664455;
+  border-radius: 5px;
+}*/
