--- a/src/css/suggest.css
+++ b/src/css/suggest.css
@@ -8,6 +8,7 @@
   text-align: left;
   width: 100%;
 }
+
 .geosuggest__input {
   -webkit-transition: border 0.2s, box-shadow 0.2s;
   transition: border 0.2s, box-shadow 0.2s;
@@ -17,8 +18,9 @@
   border-radius: 3px;
   width: 100%;
 }
+
 .geosuggest__input:focus {
-  border-color: #267dc0;
+  border-color: #664455;
   box-shadow: 0 0 0 transparent;
 }
 .geosuggest__suggests {
