--- a/src/css/nav_bar.css
+++ b/src/css/nav_bar.css
@@ -25,8 +25,8 @@ a{
 }
 
 a:hover{
-  color: #ff6666;
-  text-decoration: none;
+  color: white;
+  text-decoration: underline;
 }
 
 span.hideGlyph{
