--- a/src/css/nav_bar.css
+++ b/src/css/nav_bar.css
@@ -42,6 +42,20 @@ span.hideText{
   .nav-ul{
     background: #445566;
     height: 8vh;
+    top: 0;
+    position: fixed;
+    background: rgba(68, 85, 102, .84);
+    display: flex;
+    align-items: center;
+  }
+
+  a{
+    color: lightgray;
+  }
+
+  a:hover{
+    color: white;
+    text-decoration: underline;
   }
 
   span.hideGlyph{
